<resources>
    <string name="app_name">CompassIntlTask</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="profile_image">Profile Image</string>
    <string name="account_information">Account Information</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>